# himawari-desktop-updater

./: .gitignore  Cargo.toml  cron-himawari.sh
src/: app_error.rs  error.rs  ffi_unix.rs  ffi_windows.rs  main.rs  margins.rs  output_format.rs  output_level.rs
