[package]
name = "himawari-desktop-update"
version = "0.1.0"
authors = ["Benjamin Fox <benjaminf@intergen.co.nz>"]

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
image = "0.17.0"
clap = "2.27.1"
log = "0.3"
simple-logging = "1.0.1"
winreg = "0.4.0"
user32-sys = "0.1.2"
winapi = { version = "0.3.8", features = ["winuser"] }
rayon = "0.9.0"