[package]
name = "himawari-desktop-updater"
version = "0.1.0"
authors = ["Benjamin Fox <benjaminf@intergen.co.nz>"]

[dependencies]
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
image = "0.17.0"
clap = "2.27.1"
log = "0.3"
simple-logging = "1.0.1"
rayon = "0.9.0"
# windows dependencies
winreg = "0.10.1"
winapi = { version = "0.3.9", features = ["winuser"] }