[package]
name = "himawari-desktop-updater"
version = "0.1.0"
authors = ["Benjamin Fox <deadalus.ai@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
image = "0.24.4"
clap = "4.0.18"
rayon = "0.9.0"
# logging
log = "0.4"
simple-logging = "2.0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"
winapi = { version = "0.3.9", features = ["winuser"] }
